fix: Fixed columns z-index issue

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -21,7 +21,6 @@
 .@{table-prefix-cls} {
   .reset-component;
   position: relative;
-  z-index: 0;
   font-size: @table-font-size;
   background: @table-bg;
   border-radius: @border-radius-base;
